# surfpool

./: .gitignore  .taplo.toml  9yrrwFaQ3JuxGSzrQN2ZiQCLRdFhVt1FLBgU4xcvMoRE.json  AXEL.md  BETDoq6pWJ3FvP4NgLAZ4ZNYCw1G92guUM8pkkKm8hrF.json  CLAUDE.md  Cargo.toml  Dockerfile  README.md  Surfpool.toml  barrel.yaml  example_authority_update_payload.json  install.sh  rust-toolchain  surfpool.db  surfpool_subgraph_plugin.json
.cargo/: config.toml
.cursor/: mcp.json
.github/ISSUE_TEMPLATE/: native-scenario-support-for-protocol.md
.github/actions/coverage/: action.yml
.github/actions/report/: action.yml
.github/actions/test-report/: action.yml
.github/workflows/: benchmark.yml  docker.yml  release.yaml  release_cli.yaml  release_crates.yaml  release_image.yml  release_sdk_node_npm.yml  rust.yml  sdk_node.yml
agents/: index.md
crates/bench/: Cargo.toml  README.md
crates/bench/benches/: fixtures.rs  transaction_ingestion.rs
crates/cli/: Cargo.toml
crates/cli/src/: macros.rs  main.rs  no_dna.rs
crates/cli/src/cli/: mod.rs
crates/cli/src/cli/replay/: mod.rs
crates/cli/src/cli/simnet/: mod.rs
crates/cli/src/cloud/: mod.rs
crates/cli/src/http/: mod.rs
crates/cli/src/runbook/: mod.rs
crates/cli/src/scaffold/: anchor.rs  mod.rs  native.rs  pinocchio.rs  steel.rs  typhoon.rs  utils.rs
crates/cli/src/scaffold/templates/: readme.md.mst
crates/cli/src/tui/: mod.rs  simnet.rs
crates/cli/src/types/: mod.rs
crates/cli/tests/: pty_launcher.c  shutdown.rs
crates/core/: Cargo.toml  payload_example.json  payload_schema.json  response_schema.json  rpc_groups_schema.json  websocket_api_documentation_schema.json  websocket_schema.json
crates/core/benches/: README.md  fixtures.rs  transaction_ingestion.rs
crates/core/src/: error.rs  lib.rs  main.rs  runloop.rs  telemetry.rs  test_helpers.rs  types.rs
crates/core/src/helpers/: mod.rs  time_travel.rs
crates/core/src/rpc/: accounts_data.rs  accounts_scan.rs  admin.rs  bank_data.rs  custom.rs  full.rs  jito.rs  minimal.rs  mod.rs  surfnet_cheatcodes.rs  svm_tricks.rs  utils.rs  ws.rs
crates/core/src/rpc/schema/: accounts_data.rs  accounts_scan.rs  admin.rs  bank_data.rs  full.rs  minimal.rs  mod.rs  payload.rs  response.rs  solana_types.rs  surfnet_cheatcodes.rs  ws.rs
crates/core/src/runloops/: mod.rs
crates/core/src/scenarios/: README.md  registry.rs
crates/core/src/scenarios/examples/: kamino-liquidation-arbitrage.json
crates/core/src/scenarios/protocols/kamino/v1/: overrides.yaml
crates/core/src/scenarios/protocols/pyth/v2/: generate-price-feeds.js  overrides.yaml
crates/core/src/scenarios/protocols/raydium/cpmm/: EXAMPLE.md  overrides.yaml
crates/core/src/scenarios/protocols/raydium/v3/: overrides.yaml
crates/core/src/scenarios/protocols/raydium/v4/: generate-markets.js  idl.json  overrides.yaml
crates/core/src/scenarios/protocols/spl-token/: idl.json  overrides.yaml
crates/core/src/scenarios/protocols/switchboard/v2/: idl.json  overrides.yaml
crates/core/src/scenarios/protocols/whirlpool/: overrides.yaml
crates/core/src/simnet/: mod.rs
crates/core/src/storage/: diesel_common.rs  fifo_map.rs  hash_map.rs  mod.rs  overlay.rs  postgres.rs  sqlite.rs
crates/core/src/surfnet/: locker.rs  mod.rs  noop_program.rs  remote.rs  surfnet_lite_svm.rs  svm.rs  utils.rs
crates/core/src/tests/: helpers.rs  integration.rs  mod.rs  plugin.rs
crates/core/src/tests/assets/: idl.json  idl_v1.json  idl_v2.json  idl_v3.json  shank_idl.json
crates/core/tests/: helpers.rs  integration.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  schema.rs
crates/gql/: Cargo.toml
crates/gql/src/: lib.rs  mutation.rs  query.rs  subscription.rs
crates/gql/src/types/: collection.rs  collections.rs  entry.rs  filters.rs  mod.rs  schema.rs  sql.rs  subgraph.rs
crates/gql/src/types/scalars/: bigint.rs  hash.rs  mod.rs  pubkey.rs  signature.rs  slot.rs
crates/mcp/: Cargo.toml  README.md
crates/mcp/src/: calculator.rs  helpers.rs  lib.rs  surfpool.rs
crates/mcp/src/surfpool/: mod.rs  rpc_endpoints.json  set_token_account.rs  start_surfnet.rs
crates/sdk/: Cargo.toml  build.rs
crates/sdk-kit/: DEVELOPING.md  package.json
crates/sdk-kit/scripts/: generate.ts
crates/sdk-kit/src/: index.ts  surfnet-rpc.ts  types.ts
crates/sdk-kit/tests/: accounts.test.ts  clock.test.ts  idl.test.ts  local-queries.test.ts  network.test.ts  profiling.test.ts  programs.test.ts  scenario.test.ts  setup.ts
crates/sdk-kit/tests/helpers/: assertions.ts  client.ts  health.ts
crates/sdk-node/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
crates/sdk-node/scripts/: smoke.js  sync-dist.js
crates/sdk-node/src/: lib.rs
crates/sdk-node/surfpool-sdk/: .gitignore  index.ts
crates/sdk/src/: cheatcodes.rs  error.rs  lib.rs  report-template.dev.html  report.rs  surfnet.rs
crates/sdk/src/cheatcodes/: mod.rs  tests.rs
crates/sdk/src/cheatcodes/builders/: deploy_program.rs  mod.rs  reset_account.rs  set_account.rs  set_token_account.rs  stream_account.rs
crates/studio/: Cargo.toml  build.rs
crates/studio/src/: lib.rs
crates/subgraph/: Cargo.toml
crates/subgraph/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: features.rs  lib.rs  rpc_endpoints.json  scenarios.rs  subgraph.rs  subgraphs.rs  types.rs  verified_tokens.csv  verified_tokens.json  verified_tokens.rs
crates/types/src/utils/: mod.rs
examples/hello-geyser/: Cargo.toml  README.md  hello-geyser.json
examples/hello-geyser/src/: lib.rs
examples/payment-escrow-testing/: README.md  escrow-lifecycle.ts  time-lock-scenarios.ts
runbooks/: send_sol.tx
