[workspace.package]
version = "0.10.7"
edition = "2024"
description = "Surfpool is the best place to train before surfing Solana."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/txtx/surfpool"
keywords = ["solana-programs", "web3", "solana", "blockchains"]
categories = ["cryptography"]

[workspace]
members = [
    "crates/cli",
    "crates/core", 
    "crates/db",
    "crates/gql",
    "crates/mcp",
    "crates/subgraph",
    "crates/types",
    "crates/studio"
]
exclude = ["examples/hello-geyser"]
default-members = ["crates/cli"]
resolver = "2"

[workspace.dependencies]
agave-feature-set = "2.3.7"
agave-geyser-plugin-interface = "2.3.7"
agave-precompiles = "2.3.7"
agave-reserved-account-keys = "2.3.7"
anchor-lang-idl = "0.1.2"
axum = { version = "0.8.0", features = ["macros"] }
blake3 = "1.8.2"
bincode = "1.3.3"
borsh = "1.5.5"
bs58 = "0.5.0"
chrono = "0.4.26"
convert_case = "0.8.0"
crossbeam-channel = "0.5.15"
hex = "0.4.3"
hiro-system-kit = { version = "0.3.4" }
ipc-channel = "0.19.0"
itertools = "0.14.0"
surfpool-core = { path = "crates/core", default-features = false }
surfpool-db = { path = "crates/db" }
surfpool-gql = { path = "crates/gql" }
surfpool-mcp = { path = "crates/mcp", default-features = false }
surfpool-subgraph = { path = "crates/subgraph", default-features = false }
surfpool-types = { path = "crates/types", default-features = false }
surfpool-studio-ui = { path = "crates/studio", default-features = false }
# litesvm = { path = "../litesvm/crates/litesvm", features = ["nodejs-internal"] }
litesvm = { version = "0.7.0", features = ["nodejs-internal"] }
serde = "1.0.217"
serde_bytes = "0.11.17"
serde_derive = "1.0.217" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_json = "1.0.135"
serde_with = "3"
solana-account = "2.2.1"
solana-account-decoder = "2.3.7"
solana-account-decoder-client-types = { version = "2.3.7" }
solana-address-lookup-table-interface = "2.2.2"
solana-blake3-hasher = { version = "2.2.1", features = ["serde"]}
solana-client = "2.3.7"
solana-clock = { version = "2.2.2", features = ["serde"]}
solana-commitment-config = "2.2.1"
solana-compute-budget-interface = "2.2.1"
solana-epoch-info = { version = "2.2.1", features = ["serde"] }
solana-epoch-schedule = "2.2.1"
# solana-geyser-plugin-manager = "=2.3.7"
solana-hash = "2.3.0"
solana-keypair = "2.2.1"
solana-message = { version = "2.3.0", features = ["serde"]}
solana-native-token = "2.2.2"
solana-packet = "2.2.1"
solana-program-runtime = "2.3.7"
solana-pubkey = { version = "2.3.0", features = ["serde"]}
solana-rpc-client = "2.3.7"
solana-rpc-client-api = "2.3.7"
solana-runtime = "2.3.7"
solana-sdk = "2.3.0"
solana-sdk-ids = "2.2.1"
solana-signature = { version = "2.3.0", features = ["serde"]}
solana-signer = "2.2.1"
solana-system-interface = { version = "1.0.0", features = ["bincode"] }
solana-transaction = { version = "2.2.2", features = ["serde", "bincode"]}
solana-transaction-context = { version = "2.3.7", features = ["serde"]}
solana-transaction-error = { version = "2.2.1", features = ["serde"]}
solana-transaction-status = { version = "2.3.7" }
solana-version = "2.3.7"
spl-associated-token-account =  "7.0.0"
spl-token = "8.0.0"
spl-token-2022 = "8.0.0"
txtx-addon-kit = { version = "0.4.6", features = ["wasm"] }
txtx-core = { version = "0.4.9" }
txtx-addon-network-svm = { version = "0.3.4" }
txtx-addon-network-svm-types = { version = "0.3.3" }
txtx-gql = { version = "0.3.3" }
txtx-supervisor-ui = { version = "0.2.6", default-features = false, features = ["crates_build"]}
txtx-cloud = "0.1.10"
tracing = "0.1"
uuid = "1.15.1"
tokio = "1.43.0"
reqwest = { version = "0.12.18", features = ["blocking", "json"] }


[patch.crates-io]
## Local
# txtx-addon-kit = { path = "../txtx/crates/txtx-addon-kit" }
# txtx-core = { path = "../txtx/crates/txtx-core" }
# txtx-addon-network-svm = { path = "../txtx/addons/svm/core" }
# txtx-addon-network-svm-types = { path = "../txtx/addons/svm/types" }
# txtx-gql = { path = "../txtx/crates/txtx-gql" }
# txtx-supervisor-ui = { path = "../txtx/crates/txtx-supervisor-ui" }
# txtx-cloud = { path = "../txtx/crates/txtx-cloud" }

## Git
# txtx-addon-kit = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
# txtx-core = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
# txtx-addon-network-svm = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
# txtx-addon-network-svm-types = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
# txtx-gql = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
# txtx-supervisor-ui = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
# txtx-cloud = { git = "ssh://git@github.com/txtx/txtx.git", branch = "feat/account-subgraphs" }
