[package]
name = "surfpool-cli"
description = "Where you train before surfing Solana"
readme = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[[bin]]
name = "surfpool"
path = "src/main.rs"

[dependencies]
actix-cors = { workspace = true }
actix-web = { workspace = true }
ansi_term = { workspace = true }
anyhow = { workspace = true }
atty = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, optional = true }
clap_complete = { workspace = true, optional = true }
convert_case = { workspace = true }
crossbeam = "0.8.4"
crossterm = "0.28.1"
ctrlc = { version = "3.4.5", optional = true }
dialoguer = "0.11.0"
dirs = "6.0.0"
fern = { version = "0.7.1", features = ["colored"] }
hiro-system-kit = "0.3.1"
indicatif = "0.18.0"
juniper_actix = { version = "0.6.0", features = ["subscriptions"] }
juniper_graphql_ws = { version = "0.4.0", features = ["graphql-transport-ws"] }
lazy_static = "1.5.0"
log = "0.4.27"
mime_guess = "2.0.4"
mustache = "0.9.0"
notify = { version = "8.0.0" }
ratatui = "0.29.0"
rust-embed = "8.2.0"
serde = "1.0.217"
serde_json = "1.0.138"
solana-clock = { workspace = true }
solana-commitment-config = { workspace = true }
solana-epoch-info = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-signer = { workspace = true }
solana-system-interface = { workspace = true }
solana-transaction = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true, optional = true }
url = { workspace = true }

surfpool-core = { workspace = true }
surfpool-gql = { workspace = true }
surfpool-mcp = { workspace = true }
surfpool-studio-ui = { workspace = true }
surfpool-types = { workspace = true }

txtx-addon-network-svm = { workspace = true }
txtx-cloud = { workspace = true }
txtx-core = { workspace = true }
txtx-gql = { workspace = true }
txtx-supervisor-ui = { workspace = true, optional = true }

[features]
default = ["cli", "sqlite", "subgraph"]
cli = ["clap/derive", "clap_complete", "toml", "ctrlc", "hiro-system-kit/log"]
supervisor_ui = ["txtx-supervisor-ui"]
explorer = []
geyser_plugin = ["surfpool-core/geyser_plugin"]
sqlite = ["surfpool-gql/sqlite"]
postgres = ["surfpool-gql/postgres"]
version_check = []
subgraph = ["surfpool-core/subgraph"]

[target.'cfg(not(target_os = "windows"))'.dependencies]
fork = "0.2.0"
