[package]
name = "surfpool-core"
description = "Where you train before surfing Solana"
version = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lib]
name = "surfpool_core"
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
bincode = "1.3.3"
crossbeam-channel = "0.5.14"
log = "0.4.22"
clap = "4.5.27"
serde = "1.0.217"
serde_derive = "1.0.217" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_json = "1.0.135"
itertools = "0.14.0"
symlink = "0.1.0"
tokio = "1.43.0"
tokio-util = "0.7.13"
bs58 = "0.5.1"
indexmap = "2.7.1"
hiro-system-kit = { version = "0.3.4" }
chrono = "0.4"
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-http-server = "18.0.0"
libc = "0.2.169"
regex = "1.11.1"
litesvm = "0.5.0"
# litesvm = { path = "../../../litesvm/crates/litesvm" }

solana-sdk = "2.1.10"
solana-program-test = "2.1.10"
solana-rpc-client = "2.1.10"
solana-account-decoder = "2.1.10"
solana-accounts-db = "2.1.10"
solana-client = "2.1.10"
solana-entry = "2.1.10"
solana-faucet = "2.1.10"
solana-feature-set = "2.1.10"
solana-gossip = "2.1.10"
solana-inline-spl = "2.1.10"
solana-ledger = "2.1.10"
solana-metrics = "2.1.10"
solana-perf = "2.1.10"
solana-rpc-client-api = "2.1.10"
solana-rpc = "2.1.10"
solana-runtime = "2.1.10"
solana-runtime-transaction = "2.1.10"
solana-send-transaction-service = "2.1.10"
solana-stake-program = "2.1.10"
solana-storage-bigtable = "2.1.10"
solana-transaction-status = "2.1.10"
solana-vote-program = "2.1.10"
solana-version = "2.1.10"
solana-poh = "2.1.10"
solana-svm = "2.1.10"
solana-program-runtime = "2.1.10"
spl-token-2022 = "4.0.0"
spl-token = "7.0.0"
solana-streamer = "2.1.10"
zstd = "0.13.2"
