[package]
name = "surfpool-core"
description = "Where you train before surfing Solana"
version = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lib]
name = "surfpool_core"
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
bincode = { workspace = true }
crossbeam-channel = "0.5.14"
log = "0.4.22"
serde = { workspace = true }
serde_derive = { workspace = true } # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_json = { workspace = true }
itertools = "0.14.0"
symlink = "0.1.0"
tokio = "1.43.0"
tokio-util = "0.7.13"
bs58 = "0.5.1"
indexmap = "2.7.1"
hiro-system-kit = { version = "0.3.4" }
chrono = "0.4"
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-http-server = "18.0.0"
libc = "0.2.169"
regex = "1.11.1"
litesvm = { version = "0.5.0", features = ["nodejs-internal"] }
# litesvm = { path = "../../../litesvm/crates/litesvm" }
crossbeam = "0.8.4"
agave-geyser-plugin-interface = { workspace = true }
solana-sdk = { workspace = true }
solana-program-test = { workspace = true }
solana-rpc-client = { workspace = true }
solana-account = { workspace = true }
solana-account-decoder = { workspace = true }
solana-accounts-db = { workspace = true }
solana-client = { workspace = true }
solana-entry = { workspace = true }
solana-faucet = { workspace = true }
solana-feature-set = { workspace = true }
solana-gossip = { workspace = true }
solana-inline-spl = { workspace = true }
solana-ledger = { workspace = true }
solana-metrics = { workspace = true }
solana-perf = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-rpc = { workspace = true }
solana-runtime = { workspace = true }
solana-runtime-transaction = { workspace = true }
solana-send-transaction-service = { workspace = true }
solana-stake-program = { workspace = true }
solana-storage-bigtable = { workspace = true }
solana-transaction-status = { workspace = true }
solana-vote-program = { workspace = true }
solana-version = { workspace = true }
solana-poh = { workspace = true }
solana-svm = { workspace = true }
solana-program-runtime = { workspace = true }
solana-geyser-plugin-manager = { workspace = true }
solana-streamer = { workspace = true }
spl-token-2022 = "6.0.0"
spl-token = "7.0.0"
zstd = "0.13.2"
libloading = "0.7.4"
json5 = "0.4.1"
txtx-addon-network-svm = { workspace = true }
uuid = "1.7.0"
ipc-channel = { workspace = true }
