[package]
name = "surfpool-core"
description = "Where you train before surfing Solana"
version = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
agave-geyser-plugin-interface = { workspace = true }
base64 = "0.22.1"
bincode = { workspace = true }
borsh = { workspace = true }
bs58 = "0.5.1"
chrono = "0.4"
convert_case = { workspace = true }
crossbeam = "0.8.4"
crossbeam-channel = { workspace = true }
hex = { workspace = true }
hiro-system-kit = { version = "0.3.4" }
ipc-channel = { workspace = true }
itertools = "0.14.0"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["http"] }
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-pubsub = "18.0.0"
jsonrpc-ws-server = "18.0.0"
litesvm = { workspace = true }
log = "0.4.22"
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_derive = { workspace = true }                               # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_json = { workspace = true }
serde_with = { workspace = true }
solana-account = { workspace = true }
solana-account-decoder = { workspace = true }
solana-address-lookup-table-interface = { workspace = true }
solana-blake3-hasher = { workspace = true }
solana-client = { workspace = true }
solana-clock = { workspace = true }
solana-commitment-config = { workspace = true }
solana-epoch-info = { workspace = true }
solana-epoch-schedule = { workspace = true }
solana-feature-set = { workspace = true }
solana-hash = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-native-token = { workspace = true }
solana-packet = { workspace = true }
solana-program-runtime = { workspace = true }
solana-pubkey = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-runtime = { workspace = true }
solana-sdk = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-system-interface = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-error = { workspace = true }
solana-transaction-status = { workspace = true }
solana-version = { workspace = true }
spl-associated-token-account = { workspace = true }
surfpool-subgraph = { workspace = true }
surfpool-types = { workspace = true }
# surfpool-types = { version = "0.9.3", default-features = false }
# surfpool-subgraph = { version = "0.9.3", default-features = false }
symlink = "0.1.0"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = "0.7.13"
txtx-addon-kit = { workspace = true }
spl-token-2022 = "7.0.0"
spl-token = "7.0.0"
zstd = "0.13.2"
libloading = "0.7.4"
json5 = "0.4.1"
txtx-addon-network-svm-types = { workspace = true }
uuid = "1.7.0"
blake3 = "1.8.2"
anyhow = "1.0.98"
solana-geyser-plugin-manager = { workspace = true, optional = true }
schemars = "1.0.4"

[dev-dependencies]
test-case = "^3.3.1"
test-log = "0.2.18"

[features]
ignore_tests_ci = []
geyser-plugin = ["solana-geyser-plugin-manager"]
