[package]
name = "surfpool-mcp"
description = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["transport-io", "transport-sse-server"], package = "rmcp" }
tracing = "0.1"
axum = { version = "0.8", features = ["macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
