[package]
name = "surfpool-mcp"
description = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "ff71a526156e6c9409c450f71eccd6aced9bc339", features = [
    "transport-io",
    "transport-sse-server",
    "server",
    "schemars",
], package = "rmcp" }
tracing = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
surfpool-types = { workspace = true }
surfpool-core = { workspace = true }
reqwest = { workspace = true }
solana-sdk = { workspace = true }
spl-associated-token-account = { workspace = true }
bs58 = { workspace = true }
spl-token = { workspace = true }
hiro-system-kit = { workspace = true }
crossbeam-channel = { workspace = true }
